<resources>
    <string name="AWS_ID" />
    <string name="AWS_SECRET" />
    <string name="FlagFourText">Flag Four - Login 2</string>
    <string name="FlagOneText">Flag One - Login</string>
    <string name="FlagThreeText">Flag Three - Resources</string>
    <string name="FlagTwoText">Flag Two - Exported Activity</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_contact">Contact</string>
    <string name="action_settings">Settings</string>
    <string name="activity_bypass_info">There is a way to bypass the main activity and invoke other activities that are exported.</string>
    <string name="app_name">InjuredAndroid</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="assemblytextview">AssemblyTextView</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_submit">Submit</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_flags">clear flags</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="cmVzb3VyY2VzX3lv">F1ag_thr33</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="congrats_you_found_the_flag_d">Congrats you found the flag! :D</string>
    <string name="contact_me">Contact me!</string>
    <string name="default_web_client_id">430943006316-85ibmlobpn5p6c14b2keslrh5r6kgsn4.apps.googleusercontent.com</string>
    <string name="digital_ocean_credit">Digital Ocean Credit</string>
    <string name="donate">Donate</string>
    <string name="donate_here_to_help_support_development">Donate here to help support development!</string>
    <string name="edit_message">Enter text</string>
    <string name="enter_flag">Enter flag</string>
    <string name="enter_password">Enter password</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="firebase_database_url">https://injuredandroid.firebaseio.com</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="flag_1">Flag 1</string>
    <string name="flag_10">flag 10</string>
    <string name="flag_11">flag 11</string>
    <string name="flag_12">flag 12</string>
    <string name="flag_13">Flag 13</string>
    <string name="flag_14">Flag 14</string>
    <string name="flag_15">Flag 15</string>
    <string name="flag_15_assembly">Flag 15 - Assembly</string>
    <string name="flag_16">Flag 16</string>
    <string name="flag_16_csp_bypass">Flag 16 - CSP Bypass</string>
    <string name="flag_17">Flag 17</string>
    <string name="flag_17_ssl_pinning_bypass">Flag 17 - SSL Pinning Bypass</string>
    <string name="flag_18">Flag 18</string>
    <string name="flag_2">Flag 2</string>
    <string name="flag_3">Flag 3</string>
    <string name="flag_4">Flag 4</string>
    <string name="flag_5">Flag 5</string>
    <string name="flag_6">Flag 6</string>
    <string name="flag_7">flag 7</string>
    <string name="flag_8">flag 8</string>
    <string name="flag_9">flag 9</string>
    <string name="flag_eight_aws">flag eight - aws</string>
    <string name="flag_eighteen_file_provider">Flag Eighteen - File Provider</string>
    <string name="flag_eleven_deep_links">flag eleven - Deep Links</string>
    <string name="flag_fifteen_assembly">Flag Fifteen - Assembly</string>
    <string name="flag_five_exported_broadcast_receiver">Flag Five - Exported Broadcast Receiver</string>
    <string name="flag_fourteen_flutter_xss">Flag fourteen - Flutter XSS</string>
    <string name="flag_nine_firebase">flag nine - Firebase</string>
    <string name="flag_seven_sqlite">Flag seven - sqlite</string>
    <string name="flag_seventeen_ssl_pinning_bypass">Flag Seventeen - SSL Pinning Bypass</string>
    <string name="flag_six_login_3">flag six - login 3</string>
    <string name="flag_sixteen_csp_bypass">Flag Sixteen - CSP Bypass</string>
    <string name="flag_ten_unicode">flag ten - Unicode</string>
    <string name="flag_thirteen_rce">Flag Thirteen - RCE</string>
    <string name="flag_twelve_protected_components">flag twelve - Protected Components</string>
    <string name="flags_overview">Flags Overview</string>
    <string name="gcm_defaultSenderId">430943006316</string>
    <string name="google_api_key">AIzaSyCUImEIOSvqAswLqFak75xhskkB6illd7A</string>
    <string name="google_app_id">1:430943006316:android:d97db57e11e42a1a037249</string>
    <string name="google_crash_reporting_api_key">AIzaSyCUImEIOSvqAswLqFak75xhskkB6illd7A</string>
    <string name="google_storage_bucket">injuredandroid.appspot.com</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="input_flag">Enter flag</string>
    <string name="input_uri">Input Uri</string>
    <string name="login">login</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="xsstext">XSSText</string>
</resources>