<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <TableLayout android:gravity="center" android:orientation="horizontal" android:layout_width="323dp" android:layout_height="401dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button android:id="@+id/button10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_1" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <Button android:id="@+id/button12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_2" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <Button android:id="@+id/button13" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_3" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button android:id="@+id/button14" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_4" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <Button android:id="@+id/button15" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_5" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <Button android:id="@+id/button16" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_6" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button android:id="@+id/button17" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_7" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <Button android:id="@+id/button18" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_8" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <Button android:id="@+id/button19" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_9" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button android:id="@+id/button20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_10" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <Button android:id="@+id/button21" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_11" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <Button android:id="@+id/button22" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_12" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button android:id="@+id/button37" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_13" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <Button android:id="@+id/button38" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_14" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <Button android:id="@+id/button41" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_15" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button android:id="@+id/button43" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_16" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <Button android:id="@+id/button46" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_17" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <Button android:id="@+id/button47" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_18" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
