<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/xsstext" android:onClick="goToXSSText" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
            <Button android:id="@+id/button4" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/FlagOneText" android:onClick="goToFlagOneLogin" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintVertical_bias="0"/>
            <Button android:id="@+id/button2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/FlagTwoText" android:onClick="goToFlagTwoBypass" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/button4" app:layout_constraintVertical_bias="0"/>
            <Button android:id="@+id/button7" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/FlagThreeText" android:onClick="goToFlagThreeResources" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintHorizontal_bias="0.502" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/button2" app:layout_constraintVertical_bias="0"/>
            <Button android:id="@+id/button6" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/FlagFourText" android:onClick="goToFlagFourLogin" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/button7"/>
            <Button android:id="@+id/button8" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_five_exported_broadcast_receiver" android:onClick="goToFlagFiveReceiver"/>
            <Button android:id="@+id/button16" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_six_login_3" android:onClick="goToFlagSixLoginActivity"/>
            <Button android:id="@+id/button18" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_seven_sqlite" android:onClick="goToFlagSevenSqliteActivity"/>
            <Button android:id="@+id/button20" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_eight_aws" android:onClick="goToFlagEightLoginActivity"/>
            <Button android:id="@+id/button21" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_nine_firebase" android:onClick="goToFlagNineFirebaseActivity"/>
            <Button android:id="@+id/button22" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_ten_unicode" android:onClick="goToFlagTenUnicodeActivity"/>
            <Button android:id="@+id/button28" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_eleven_deep_links" android:onClick="goToFlagElevenDeeplinkActivity"/>
            <Button android:id="@+id/button29" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_twelve_protected_components" android:onClick="goToFlagTwelveProtectedActivity"/>
            <Button android:id="@+id/button35" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_thirteen_rce" android:onClick="goToFlagThirteenActivity"/>
            <Button android:id="@+id/button36" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_fourteen_flutter_xss" android:onClick="goToFlagFourteenActivity"/>
            <Button android:id="@+id/button39" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_fifteen_assembly" android:onClick="goToFlagFifteenActivity"/>
            <Button android:id="@+id/button33" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_sixteen_csp_bypass" android:onClick="goToFlagSixteenActivity"/>
            <Button android:id="@+id/button44" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_seventeen_ssl_pinning_bypass" android:onClick="goToFlagSeventeenActivity"/>
            <Button android:id="@+id/button48" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flag_eighteen_file_provider" android:onClick="goToFlagEighteenActivity"/>
            <Button android:id="@+id/button11" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/flags_overview" android:onClick="goToFlagFlagsOverview"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
