<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <Button android:id="@+id/button30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_submit" android:onClick="submitFlag" android:layout_marginEnd="40dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/editText9" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.162"/>
    <EditText android:id="@+id/editText9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/enter_flag" android:ems="10" android:inputType="textPersonName" android:layout_marginStart="48dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.161"/>
</androidx.constraintlayout.widget.ConstraintLayout>
