<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <Button android:id="@+id/button26" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="28dp" android:text="@string/button_submit" android:onClick="submitIntent" android:layout_marginEnd="28dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.159"/>
    <EditText android:id="@+id/editText6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/input_uri" android:ems="10" android:inputType="textPersonName" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/button26" app:layout_constraintHorizontal_bias="0.58" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.163"/>
    <WebView android:id="@+id/webview" android:layout_width="match_parent" android:layout_height="match_parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
